# libass-test

./: .gitignore
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  cross_file.txt  native-lib.cpp
app/src/main/java/com/example/myapplication/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
